--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -5,14 +5,15 @@ $darker-grey: hsl(227, 10%, 46%);
 $grey: hsl(0, 0%, 59%);
 
 // Fonts
-$font-text:'Kumbh Sans', sans-serif;
+$font-text:'Kumbh Sans',
+sans-serif;
 $font-400: 400;
 $font-700: 700;
 
 // Functions
 @mixin flex-center($direction) {
     display: flex;
-    justify-content:center;
+    justify-content: center;
     align-items: center;
     flex-direction: $direction;
 }
