--- a/styles/style.css
+++ b/styles/style.css
@@ -93,4 +93,5 @@ body {
   background-color: #19a2ae;
   background-image: url(/images/bg-pattern-top.svg), url(/images/bg-pattern-bottom.svg);
   background-repeat: no-repeat, no-repeat;
+  background-position: right 50vw bottom 38vh, left 48vw top 51vh;
 }/*# sourceMappingURL=style.css.map */
