--- a/styles/_card.scss
+++ b/styles/_card.scss
@@ -8,13 +8,11 @@
 .container-top {
     height: 140px;
     width: 326px;
-    background-image: url(/images/bg-pattern-card.svg);
+    background-image: url(./images/bg-pattern-card.svg);
     border-radius: 1rem 1rem 0 0;
 }
 
 .user-photo {
-    // position: absolute;
-    // top: 30%;
     border-radius: 50%;
     border: 5px solid #FFFFFF;
     margin-top: -2.6rem;
@@ -24,8 +22,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    // margin-top: -2.6rem;
-    // padding-bottom: 1.7rem;
     border-bottom: 1px solid rgb(230, 227, 227);
 
 }
@@ -55,7 +51,7 @@
 
 .stats {
     @include flex-center(row);
-    justify-content: space-around; ////fix spacing around stats
+    justify-content: space-around;
     padding: 1.2rem 1.2rem 0 1.2rem;
 }
 
