--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@
 .container-top {
   height: 140px;
   width: 326px;
-  background-image: url(/images/bg-pattern-card.svg);
+  background-image: url(./images/bg-pattern-card.svg);
   border-radius: 1rem 1rem 0 0;
 }
 
@@ -91,7 +91,7 @@ body {
   font-family: "Kumbh Sans", sans-serif;
   font-size: 18px;
   background-color: #19a2ae;
-  background-image: url(/images/bg-pattern-top.svg), url(/images/bg-pattern-bottom.svg);
+  background-image: url(./images/bg-pattern-top.svg), url(./images/bg-pattern-bottom.svg);
   background-repeat: no-repeat, no-repeat;
   background-position: right 50vw bottom 38vh, left 48vw top 51vh;
 }/*# sourceMappingURL=style.css.map */
