--- a/styles/style.scss
+++ b/styles/style.scss
@@ -13,7 +13,7 @@ body {
     font-family: $font-text;
     font-size: 18px;
     background-color: $cyan;
-    background-image: url(/images/bg-pattern-top.svg), url(/images/bg-pattern-bottom.svg);
+    background-image: url(./images/bg-pattern-top.svg), url(./images/bg-pattern-bottom.svg);
     background-repeat: no-repeat, no-repeat;
     background-position: right 50vw bottom 38vh, left 48vw top 51vh;
 }
