'...' in front of images for github pages

--- a/styles/_card.scss
+++ b/styles/_card.scss
@@ -8,7 +8,7 @@
 .container-top {
     height: 140px;
     width: 326px;
-    background-image: url(./images/bg-pattern-card.svg);
+    background-image: url(../images/bg-pattern-card.svg);
     border-radius: 1rem 1rem 0 0;
 }
 
